Closed Bug 1217606 Opened 9 years ago Closed 9 years ago

ARM64: OOM errors in Assembler::emitExtendedJumpTable

Categories

(Core :: JavaScript Engine: JIT, defect)

ARM
Unspecified
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: jolesen, Assigned: jolesen)

References

Details

Attachments

(1 file)

Build SpiderMonkey with --enable-simulator=arm64. Run jit_test with "--no-ion --no-asmjs --baseline-eager" Results: Assertions like: Assertion failure: prePointer - preOffset == OffsetOfJumpTableEntryPointer, at /Users/jolesen/gecko-dev/js/src/jit/arm64/Assembler-arm64.cpp:127 Failing tests (among others): js/src/jit-test/tests/gc/oomInParseAsmJS.js js/src/jit-test/tests/gc/oomInParseFunction.js js/src/jit-test/tests/gc/oomInWeakMap.js
Assertions would trip if the assembler buffer runs out of memory midway through the jump table.
Attachment #8677715 - Flags: review?(sstangl)
Attachment #8677715 - Flags: review?(sstangl) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: