Bug 1217606 - Handle OOM in Assembler::emitExtendedJumpTable(). r=sstangl

Assertions would trip if the assembler buffer runs out of memory midway
through the jump table.